--- a/Views/Escuela/Index.cshtml
+++ b/Views/Escuela/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <h1>Escuela: @ViewData["Title"]</h1>
 <h2>Nombre: @Model.Nombre</h2>
-<p>Año de fundación: @Model.añoFundación</p>
+<p>Año de fundación: @Model.AñoDeCreación</p>
 
 <p>@ViewBag.OtrosDatos</p>
 <p>@ViewData["OtrosDatos"]</p>
