--- a/Views/Escuela/Index.cshtml
+++ b/Views/Escuela/Index.cshtml
@@ -6,6 +6,13 @@
 }
 <h1>Escuela: @ViewData["Title"]</h1>
 <h2>Nombre: @Model.Nombre</h2>
+<h3>Tipo de Escuela: @Model.TipoEscuela</h3>
+<address>
+    <p>Dirección:@Model.Dirección</p>
+    <p>País:@Model.Pais</p>
+    <p>Ciudad:@Model.Ciudad</p>
+
+</address>
 <p>Año de fundación: @Model.AñoDeCreación</p>
 
 <p>@ViewBag.OtrosDatos</p>
