--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 @foreach(var asignatura in Model){
-    <partial name= "Asignatura_simple" model="asignatura" />
+    <partial name= "ObjetoEscuelaSimple" model="asignatura" />
     
 }
 
